--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -14,11 +14,11 @@
                 required: false,
                 input_html: { autocomplete: 'longitude' } %>
     <p id='js-geolocation_notice'>(Geolocation will be captured automatically)</p>
-</div>
-<footer>
-    <div class="button-container">
-      <%= f.button :submit, "create story", class: 'button button__confirm' %>
+    <div class="footer">
+      <div class="button-container">
+        <%= f.button :submit, "create story", class: 'button button__confirm' %>
+      </div>
     </div>
   <% end %>
-</footer>
+</div>
 
