--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -4,10 +4,10 @@
     <%= f.input :name,
                 required: true,
                 input_html: { placeholder: 'name this tag...' } %>
-</div>
-<footer>
-    <div class="button-container">
-      <%= f.button :submit, "save tag", class: 'button button__confirm' %>
+    <div class="footer">
+      <div class="button-container">
+        <%= f.button :submit, "save tag", class: 'button button__confirm' %>
+      </div>
     </div>
   <% end %>
-</footer>
+</div>
