--- a/app/assets/stylesheets/components/stories.scss
+++ b/app/assets/stylesheets/components/stories.scss
@@ -127,7 +127,7 @@
   flex-direction: column;
   flex: 1;
   p {
-    margin-top: 1rem;
+    margin: 1rem 0;
     font-size: $small-font-size;
   }
 }
