--- a/app/assets/stylesheets/components/stories.scss
+++ b/app/assets/stylesheets/components/stories.scss
@@ -119,7 +119,8 @@
   margin: 0 5px;
 }
 
-// FORMS
+
+// NEW STORY
 .new_story {
   text-align: center;
   margin: 5% 0;
@@ -130,11 +131,6 @@
     margin: 1rem 0;
     font-size: $small-font-size;
   }
-}
-
-.btn {
-  border: none;
-  // display: none;
 }
 
 .story_photos {
@@ -162,4 +158,48 @@
 #story_photos {
   width: calc(100vw - 10%);
   height: calc(90vh - 3rem);
+}
+
+
+// RATINGS
+.ratings-grid {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.ratings-container {
+  overflow: scroll;
+  .mood-gradient {
+    background: linear-gradient(to right, rgba(255, 95, 109, 0.52) 0%, rgba(255, 195, 113, 0.73) 100%);
+  }
+  .feeling-gradient {
+    background: linear-gradient(to right, rgba(54, 209, 220, 0.52) 0%, rgba(91, 134, 229, 0.73) 100%);
+  }
+  .ambience-gradient {
+    background: linear-gradient(to right, rgba(170, 7, 107, 0.52) 0%, rgba(97, 4, 95, 0.73) 100%);
+  }
+}
+
+.rating-card {
+  margin: 1rem 0;
+  display: inline-block;
+  position: relative;
+}
+
+.rating-image {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius:4px;
+  z-index: -1;
+}
+
+.rating-text {
+  position: absolute;
+  margin: 0 auto;
+  color: $text-alt;
 }
