--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -6,7 +6,7 @@
                 input_html: { placeholder: 'name this tag...' } %>
     <div class="footer">
       <div class="button-container">
-        <%= f.button :submit, "save tag", class: 'button button__confirm' %>
+        <%= f.button :submit, "save", class: 'button button__confirm' %>
       </div>
     </div>
   <% end %>
