Add feature to display and add untagged tags

--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -16,7 +16,7 @@
 
 <footer>
   <div class="button-container">
-    <%= link_to "edit tagging", story_taggings_path(@story), class: 'button button__confirm button__left' %>
-    <%= link_to "edit ratings", experience_story_path(@story), class: 'button button__confirm button__right' %>
+    <%= link_to "edit tags", story_taggings_path(@story), class: 'button button__edit button__left' %>
+    <%= link_to "edit ratings", experience_story_path(@story), class: 'button button__edit button__right' %>
   </div>
 </footer>
