--- a/app/assets/stylesheets/components/_config.scss
+++ b/app/assets/stylesheets/components/_config.scss
@@ -34,6 +34,10 @@ $delete: $orange;
 $delete-hover: $dark-orange;
 $confirm: $blue;
 $confirm-hover: $dark-blue;
+$notice: $light-beige;
+$notice-text: $dark-purple;
+$alert: $light-orange;
+$alert-text: $dark-orange;
 
 // FONT SETTINGS
 $header-font: 'Roboto', sans-serif;
