--- a/app/views/stories/pricing.html.erb
+++ b/app/views/stories/pricing.html.erb
@@ -29,13 +29,13 @@
     <div class="rate-worth-it__true <%= @story.worth_it %>">
       <%= link_to story_path(@story, worth_it: true),
           method: :put do %>
-        <%= image_tag "image-button-worth-it.png" %>
+        <%= image_tag "https://res.cloudinary.com/grumbeard2/image/upload/v1600487762/image-button-worth-it_pxrpk4.png" %>
       <% end %>
     </div>
     <div class="rate-worth-it__false <%= @story.worth_it %>">
       <%= link_to story_path(@story, worth_it: false),
           method: :put do %>
-        <%= image_tag "image-button-not-worth-it.png" %>
+        <%= image_tag "https://res.cloudinary.com/grumbeard2/image/upload/v1600487755/image-button-not-worth-it_pzdajm.png" %>
       <% end %>
     </div>
   </section>
