Fix bug in Stories#Update caused by links in Stories#Pricing page

--- a/app/assets/stylesheets/components/stories.scss
+++ b/app/assets/stylesheets/components/stories.scss
@@ -158,7 +158,7 @@
     background-size: cover;
     flex: 1;
   }
-  @media (min-width: #{$tablet-width}) {
+  @media (min-width: $tablet-width) {
     label {
       background-image: url($image-button-landscape)
     }
