--- a/app/views/stories/pricing.html.erb
+++ b/app/views/stories/pricing.html.erb
@@ -4,14 +4,14 @@
       <% @story.price_rating.times do |rating| %>
         <span class="price__true" data-price-rating="<%= rating %>">
           <%= link_to '$',
-          story_path(@story), price_rating: (rating + 1),
+          story_path(story: { id: @story.id, price_rating: (rating + 1) }),
           method: :put %>
         </span>
       <% end %>
       <% (3 - @story.price_rating).times do |rating| %>
         <span class="price__false" data-price-rating="<%= rating + @story.price_rating %>">
           <%= link_to '$',
-          story_path(@story, price_rating: (rating + 1 + @story.price_rating)),
+          story_path(story: { id: @story.id, price_rating: (rating + 1 + @story.price_rating) }),
           method: :put %>
         </span>
       <% end %>
@@ -19,7 +19,7 @@
       <% 3.times do |rating| %>
         <span class="price__false" data-price-rating="<%= rating %>">
           <%= link_to '$',
-          story_path(@story, price_rating: (rating + 1)),
+          story_path(story: { id: @story.id, price_rating: (rating + 1) }),
           method: :put %>
         </span>
       <% end %>
@@ -27,13 +27,13 @@
   </section>
   <section class="rate-worth-it container__two-third-height">
     <div class="rate-worth-it__true <%= @story.worth_it %>">
-      <%= link_to story_path(@story, worth_it: true),
+      <%= link_to story_path(story: { id: @story.id, worth_it: true }),
           method: :put do %>
         <%= image_tag "https://res.cloudinary.com/grumbeard2/image/upload/v1600487762/image-button-worth-it_pxrpk4.png" %>
       <% end %>
     </div>
     <div class="rate-worth-it__false <%= @story.worth_it %>">
-      <%= link_to story_path(@story, worth_it: false),
+      <%= link_to story_path(story: { id: @story.id, worth_it: false }),
           method: :put do %>
         <%= image_tag "https://res.cloudinary.com/grumbeard2/image/upload/v1600487755/image-button-not-worth-it_pzdajm.png" %>
       <% end %>
